<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tiptext">Tip is:</string>
    <string name="tipAmount"></string>
    <string name="smallTipAmount">10%</string>
    <string name="midTipAmount">15%</string>
    <string name="largeTipAmount">20%</string>
    <string name="custTip">Custom Tip:</string>

</resources>
